changes for shipment contract-1